<resources>
    <string name="success_insert_fav">Berhasil menambahkan ke daftar favorit</string>
    <string name="delete_from_fav">Hapus dari favorit</string>
    <string name="confirm_message">Yakin ingin menghapus item ini?</string>
    <string name="confirm_title">Konfirmasi penghapusan</string>
    <string name="pos_btn">Ya</string>
    <string name="neg_btn">Tidak</string>
    <string name="success_info">Berhasil menghapus dari daftar favorit</string>
    <string name="search">Search</string>
    <string name="not_found">Tidak ada hasil yang cocok, silakan coba lagi!</string>
    <string name="app_name">Karcis</string>
    <string name="info">I N F O</string>
    <string name="buy">BUY</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">TV Show</string>
    <string name="tab_text_3">Favorite</string>
    <string name="preman"><b>Storyline</b>\n\nAfter three years, the business of Muslihat, who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira, her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates. Written by filmindonesia.or.id</string>
    <string name="star"><b>Storyline</b>\n\nSeasoned musician Jackson Maine (Bradley Cooper) discovers-and falls in love with-struggling artist Ally (Gaga). She has just about given up on her dream to make it big as a singer - until Jack coaxes her into the spotlight. But even as Ally`s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons. Written by Warner Bros.</string>
    <string name="bird"><b>Storyline</b>\n\nIn the wake of an unknown global terror, a mother must find the strength to flee with her children down a treacherous river in search of safety. Due to unseen deadly forces, the perilous journey must be made blindly. Directed by Emmy winner Susanne Bier, Bird Box is a thriller starring Academy Award winner Sandra Bullock, John Malkovich, Sarah Paulson, and Trevante Rhodes. Written by Netflix</string>
    <string name="hunter"><b>Storyline</b>\n\nA U.S. submarine, the USS Tampa Bay, vanishes while shadowing a Russian Akula-class submarine in the Arctic. Rear Admiral John Fisk sends a Virginia-class submarine, the USS Arkansas, under the command of newly-promoted and unorthodox Commander Joe Glass to investigate. At the same time, a Navy SEAL team under the command of Lieutenant Bill Beaman is sent in to discreetly observe a Russian naval base. When they arrive at the naval base, they witness defense minister Dmitri Durov conducting a coup d`etat and taking Russian President Zakarin prisoner, and swiftly realize that Durov intends to trigger a war..</string>
    <string name="glass"><b>Storyline</b>\n\nAfter pursuing Kevin Wendell Crumb and the multiple identities that reside within. David Dunn finds himself locked in a mental hospital alongside his archenemy, Elijah Price and must contend with a psychiatrist who is out to prove the trio do not actually possess superhuman abilities Written by vsuperkuns</string>
    <string name="dragon"><b>Storyline</b>\n\nAs Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccups reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind. Written by JC Jamison</string>
    <string name="spiderman"><b>Storyline</b>\n\nMiles Morales is a New York teen struggling with school, friends and, on top of that, being the new Spider-Man. When he comes across Peter Parker, the erstwhile saviour of New York, in the multiverse, Miles must train to become the new protector of his city. Written by Tom Daly</string>
    <string name="robinhood"><b>Storyline</b>\n\nA war-hardened crusader Robin of Loxley (Taron Egerton) and his Moorish commander (Jamie Foxx) mount an audacious revolt against the corrupt English crown.</string>
    <string name="bumblebee"><b>Storyline</b>\n\nOn Cybertron, the Autobots, led by Optimus Prime, are on the verge of losing the Great Cybertronian War to their enemies, the Decepticons, and begin making preparations to leave the planet. The Decepticons led by Shockwave, Soundwave and Starscream ambush them during the evacuation, and Optimus sends a young scout, B-127, to Earth in order to set up a base of operations where the Autobots can regroup. B-127 reaches Earth alone in 1987, crash-landing in California and disrupting a training exercise being conducted by Sector 7, a secret government agency that monitors extraterrestrial activity on Earth. Sector 7 agent Colonel Jack Burns presumes B-127 to be a hostile invader and attacks, driving B-127 into the forest, where he is then ambushed by the Decepticon Blitzwing. When B-127 refuses to reveal Optimus whereabouts, Blitzwing spitefully tears out his voice-box and damages his memory core. B-127 manages to destroy Blitzwing before collapsing from his wounds. Before entering stasis,... Written by Paramount Pictures</string>
    <string name="aquaman"><b>Storyline</b>\n\nArthur Curry, half human half from Atlantis, goes on a trip of a lifetime. Not only does this adventure compel him to come to terms with his real identity, but it also forces him to discover whether he is entirely worthy of fulfilling his own destiny: becoming a king. Written by Domingo Alvarez</string>
    <string name="venom"><b>Storyline</b>\n\nAfter a faulty interview with the Life Foundation ruins his career, former reporter Eddie Brocks life is in pieces. Six months later, he comes across the Life Foundation again, and he comes into contact with an alien symbiote and becomes Venom, a parasitic antihero.</string>
    <string name="endgame"><b>Storyline</b>\n\nAs the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment, the fate of Earth and existence has never been more uncertain. Written by Marvel Studios</string>
    <string name="dead"><b>Storyline</b>\n\nSheriff Deputy Rick Grimes gets shot and falls into a coma. When awoken he finds himself in a Zombie Apocalypse. Not knowing what to do he sets out to find his family, after he`s done that he gets connected to a group to become the leader. He takes charge and tries to help this group of people survive, find a place to live, and get them food. This show is all about survival, the risks, and the things you`ll have to do to survive. Written by jzirkle1</string>
    <string name="gotham"><b>Storyline</b>\n\nIn crime ridden Gotham City, Thomas and Martha Wayne are murdered before young Bruce Wayne`s eyes. Although Gotham City Police Department detectives, James Gordon, and his cynical partner, Harvey Bullock, seem to solace`s the case quickly, things are not so simple. Inspired by Bruce`s traumatized desire for justice, Gordon vows to find it amid Gotham`s corruption. Thus begins Gordon`s lonely quest that would set him against his own comrades and the underworld with their own deadly rivalries and mysteries. In the coming wars, innocence will be lost and compromises will be made as some criminals will fall as casualties while others will rise as super villains. All the while, young Bruce observes this war with a growing obsession that would one day drive him to seek his own justice against the evil of Gotham as The Batman. Written by Kenneth Chisholm (kchishol@rogers.com)</string>
    <string name="arrow"><b>Storyline</b>\n\nOliver Queen and his father are lost at sea when their luxury yacht sinks, apparently in a storm. His father dies, but Oliver survives for five years on an uncharted island and eventually returns home. But he wasn`t alone on the island where he learned not only how to fight and survive but also of his father`s corruption and unscrupulous business dealings. He returns to civilization a changed man, determined to put things right. He disguises himself with the hood of one of his mysterious island mentors, arms himself with a bow and sets about hunting down the men and women who have corrupted his city. Written by Anonymous</string>
    <string name="flash"><b>Storyline</b>\n\nBarry Allen is a Central City police forensic scientist with a reasonably happy life, despite the childhood trauma of a mysterious red and yellow lightning killing his mother and framing his father. All that changes when a massive particle accelerator accident leads to Barry being struck by lightning in his lab. Coming out of coma nine months later, Barry and his new friends at S.T.A.R labs find that he now has the ability to move at superhuman speed. Furthermore, Barry learns that he is but one of many affected by that event, most of whom are using their powers for evil. Determined to make a difference, Barry dedicates his life to fighting such threats, as The Flash. While he gains allies he never expected, there are also secret forces determined to aid and manipulate him for their own agenda. Written by Kenneth Chisholm (kchishol@rogers.com)</string>
    <string name="supergirl"><b>Storyline</b>\n\nYears ago, Krypton was about to explode and Kal-El was sent to Earth to escape that fate. However, his older cousin, Kara, was also intended to accompany the infant as his protector. Unfortunately, Kara was accidentally diverted into the timeless Phantom Zone for years before finally arriving on Earth decades later and found by her cousin who had grown into Superman. Years later, Kara Danvers is a young professional adrift in a thankless job until a fateful crisis ignites a sense of purpose using Kryptonian powers she had long hidden. Inspired, Kara decides to emulate her cousin`s superheroic ways, only to find her foster sister introducing her to the secret Department of Extra-Normal Operations, dedicated to fighting alien menaces including those Kara inadvertently led to Earth. Now with such help, the Maid of Might takes her place as Earth`s newest champion with new friends and enemies challenging her world. Written by Kenneth Chisholm (kchishol@rogers.com)</string>
    <string name="family"><b>Storyline</b>\n\nSick, twisted and politically incorrect, the animated series features the adventures of the Griffin family. Endearingly ignorant Peter and his stay-at-home wife Lois reside in Quahog, R.I., and have three kids. Meg, the eldest child, is a social outcast, and teenage Chris is awkward and clueless when it comes to the opposite sex. The youngest, Stewie, is a genius baby bent on killing his mother and destroying the world. The talking dog, Brian, keeps Stewie in check while sipping martinis and sorting through his own life issues. Written by Jwelch5742</string>
    <string name="simson"><b>Storyline</b>\n\nThis is an animated sitcom about the antics of a dysfunctional family. Homer is the oafish unhealthy beer loving father, Marge is the hardworking homemaker wife, Bart is the perpetual ten-year-old underachiever (and proud of it), Lisa is the unappreciated eight-year-old genius, and Maggie is the cute, pacifier loving silent infant. Written by Sam Kelly</string>
    <string name="summary_daily_reminder">Receive daily reminder \nat 8AM</string>
    <string name="summary_release_reminder">Receive daily movie release info \nat 7AM</string>
    <string name="notifications_title">Notification</string>
    <string name="language_title">Change Language</string>
    <string name="lang">Select Language</string>
    <string name="settings">Settings</string>
</resources>